🐛 Fixed z-index to css class cursor to show it on modals

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -474,6 +474,7 @@
   .btn-primary-nfocus {
     @apply btn-primary;
   }
+
   .btn-primary-nfocus:focus:not(:hover) {
     background: var(--color-accent);
     color: var(--color-light);
@@ -1198,6 +1199,7 @@
   transition: none;
   will-change: transform;
   background: none;
+  z-index: 2147483647;
 }
 
 .cursor img {
